FINERACT-2012: Fineract resource settings