@@ -44,22 +44,6 @@ jib {
     container {
         creationTime = 'USE_CURRENT_TIMESTAMP'
         mainClass = 'org.apache.fineract.ServerApplication'
-        jvmFlags = [
-            '-Xms1G',
-            '-XshowSettings:vm',
-            '-XX:+UseContainerSupport',
-            '-XX:+UseStringDeduplication',
-            '-XX:MinRAMPercentage=25',
-            '-XX:MaxRAMPercentage=80',
-            '--add-exports=java.naming/com.sun.jndi.ldap=ALL-UNNAMED',
-            '--add-opens=java.base/java.lang=ALL-UNNAMED',
-            '--add-opens=java.base/java.lang.invoke=ALL-UNNAMED',
-            '--add-opens=java.base/java.io=ALL-UNNAMED',
-            '--add-opens=java.base/java.security=ALL-UNNAMED',
-            '--add-opens=java.base/java.util=ALL-UNNAMED',
-            '--add-opens=java.management/javax.management=ALL-UNNAMED',
-            '--add-opens=java.naming/javax.naming=ALL-UNNAMED'
-        ]
         args = [
             '-Duser.home=/tmp',
             '-Dfile.encoding=UTF-8',
@@ -111,5 +95,3 @@ jib {
         }
     }
 }
-
-// tasks.jibDockerBuild.dependsOn(':fineract-provider:bootJar')
